Fix bug with scroll bar visibility on small screens

--- a/src/pages/History/historyPage.css
+++ b/src/pages/History/historyPage.css
@@ -20,4 +20,8 @@
         overflow-y: scroll;
         padding: 1.5rem 0px 1rem;
     }
+
+    .HistoryPage::-webkit-scrollbar {
+        display: none;
+    }
 }
