--- a/src/pages/UserPageLayout/UserPageLayout.css
+++ b/src/pages/UserPageLayout/UserPageLayout.css
@@ -2,7 +2,7 @@
     --header-height: 100px;
     --navbar-width: 250px;
     --navbar-width-small: 125px;
-    --navbar-high-small: 55px;
+    --navbar-high-small: 63px;
 
     --dashboard-font-color: rgb(60, 60, 60);
     --dashboard-font-size: 16px;
